--- a/admin/admin.html
+++ b/admin/admin.html
@@ -9,8 +9,10 @@
   <body>
     <script type="text/javascript" src="script.js">
     </script>
-    <div>
-      <h3>Ladda upp ny bild</h3>
+    <div class="box">
+      <div class="title">
+	Ladda upp ny bild
+      </div>
       <form name="upload"
 	    action="./action.php"
 	    method="post"
@@ -20,10 +22,13 @@
 	<button>Ladda upp</button>
       </form>
     </div>
-    <div>
-      <h3>Existerande bilder (klicka för att ta bort)</h3>
+    <div class="box">
+      <div class="title">
+	Existerande bilder (klicka för att ta bort)
+      </div>
       <div class="slides">
 	¤slides
+	<div class="end"></div>
       </div>
     </div>
   </body>
