Prettyfied the image listing

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -34,7 +34,7 @@
   </body>
 </html>
 ¤¤
-<div class="slide">
-    <img src="./thumb.php?slide=¤slide" onclick="make_sure('¤slide')">
+<div class="slide" onclick="make_sure('¤slide')">
+    <img class="picture" src="./thumb.php?slide=¤slide">
     <a id="¤slide" hidden="" href="./action.php?delete=¤slide">delete</a>
 </div>
