Changed thumbnails to be generated on upload instead of on the fly.

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -34,7 +34,8 @@
   </body>
 </html>
 ¤¤
-<div class="slide" onclick="make_sure('¤slide')">
-    <img class="picture" src="./thumb.php?slide=¤slide">
-    <a id="¤slide" hidden="" href="./action.php?delete=¤slide">delete</a>
+<div class="slide">
+  <a href="./action.php?delete=¤slide" onclick="return make_sure('¤slide')">
+    <img class="picture" src="../thumbs/¤slide">
+  </a>
 </div>
