--- a/admin/admin.html
+++ b/admin/admin.html
@@ -36,6 +36,6 @@
 ¤¤
 <div class="slide">
   <a href="./action.php?delete=¤slide" onclick="return make_sure('¤slide')">
-    <img class="picture" src="../thumbs/¤slide">
+    <img class="picture" src="../uploads/thumb_¤slide">
   </a>
 </div>
