Added initial code for multiple screens. Also cleaned up sql query strings a bit.

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -31,6 +31,14 @@
 	<div class="end"></div>
       </div>
     </div>
+    <div class="box">
+      <div class="title">
+	Visningsytor
+      </div>
+      <div class="shows">
+	¤shows
+      </div>
+    </div>
   </body>
 </html>
 ¤¤
@@ -38,4 +46,11 @@
   <a href="./action.php?delete=¤slide" onclick="return make_sure('¤slide')">
     <img class="picture" src="../uploads/thumb_¤slide">
   </a>
+</div>
+¤¤
+<div class="show">
+  <div class="title">
+    ¤name
+  </div>
+  ¤slides
 </div>
