--- a/picture.html
+++ b/picture.html
@@ -1,7 +1,7 @@
 <html>
   <body style="background-color: #000000; padding: 0px; margin: 0px; overflow: hidden;">
     <center>
-      <img src="./picture.php" style="margin: 0px; padding: 0px">
+      <img src="./slide.php?name=¤picture" style="margin: 0px; padding: 0px">
     </center>
   </body>
 </html>
