Added error feedback

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -22,6 +22,9 @@
       <input type="hidden" name="remove" />
       <input type="hidden" name="from" />
     </form>
+    <div class="box error">
+      ¤error
+    </div>
     <div class="box">
       <div class="title left">
 	Tillgängliga bilder
