Made proper error message handling and minor css tweaks

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -22,8 +22,10 @@
       <input type="hidden" name="remove" />
       <input type="hidden" name="from" />
     </form>
-    <div class="box error">
-      ¤error
+    <div class="error ¤visibility">
+      <div class="box">
+	¤error
+      </div>
     </div>
     <div class="box">
       <div class="title left">
@@ -102,7 +104,9 @@
   <input type="hidden" name="add" />
   <input type="hidden" name="to" value="show_¤showid" />
   <div class="title">
-    ¤name (id: ¤showid)
+    ¤name<br />
+    id: ¤showid<br />
+    <a href="../?id=¤showid">Länk</a>
   </div>
   ¤slides
 </form>
