Moved the slideshow link into its name

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -104,9 +104,9 @@
   <input type="hidden" name="add" />
   <input type="hidden" name="to" value="show_¤showid" />
   <div class="title">
-    ¤name<br />
-    id: ¤showid<br />
-    <a href="../?id=¤showid">Länk</a>
+    <a href="../?id=¤showid">¤name</a>
+    <br />
+    id: ¤showid
   </div>
   ¤slides
 </form>
