--- a/picture.html
+++ b/picture.html
@@ -1,5 +1,10 @@
 <html>
   <body style="background-color: #000000; padding: 0px; margin: 0px; overflow: hidden;">
+    <script type="text/javascript">
+      window.setTimeout(function sleep() {
+        window.location.reload(true);
+      }, ¤timeout*1000);
+    </script>
     <center>
       <img src="./slide.php?name=¤picture" style="margin: 0px; padding: 0px">
     </center>
