--- a/admin/admin.html
+++ b/admin/admin.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <link rel="stylesheet" type="text/css" href="../style.css" />
-    <title>Slides (admin)</title>
+    <title>¤title (admin)</title>
   </head>
   <body>
     <script type="text/javascript" src="script.js"></script>
