--- a/list.html
+++ b/list.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <title>Slides</title>
+    <title>¤title</title>
   <body>
     <div class="box">
       <div class="title">
