Made thumbnails be generated the same way as slides

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -91,7 +91,7 @@
      draggable="true"
      ondragstart="dragstart(event)"
      ondragend="dragend(event)">
-  <img class="block center" src="../uploads/thumb_¤slide" draggable="false" />
+  <img class="block center" src="../slide.php?thumb&name=¤slide" draggable="false" />
 </div>
 ¤¤
 <form name="show_¤showid"
