Made the admin page layout more dynamic

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -107,7 +107,9 @@
 
       draggable="true"
       ondragstart="dragstart(event)"
-      ondragend="dragend(event)">
+      ondragend="dragend(event)"
+
+      style="width: ¤widthpx;">
 
   <input type="hidden" name="add" />
   <input type="hidden" name="to" value="show_¤showid" />
