First steps towards individual dimensions for shows. Also minor code cleanup

--- a/picture.html
+++ b/picture.html
@@ -6,7 +6,7 @@
       }, ¤timeout*1000);
     </script>
     <center>
-      <img src="./slide.php?name=¤picture" style="margin: 0px; padding: 0px">
+      <img src="./slide.php?show=¤show&name=¤picture" style="margin: 0px; padding: 0px">
     </center>
   </body>
 </html>
