Fixed a minor bug

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -145,10 +145,12 @@
       <img class="smallbutton inline"
 	   src="../images/revert.svg"
 	   onclick="revert(event)"
+	   draggable="false"
 	   title="Avbryt" />
       <img class="smallbutton inline"
 	   src="../images/commit.svg"
 	   onclick="submit_form(event)"
+	   draggable="false"
 	   title="Spara" />
     </form>
   </div>
