--- a/admin/admin.html
+++ b/admin/admin.html
@@ -30,7 +30,7 @@
 	<input type="hidden" name="from" />
       </form>
     </div>
-    <div class="error box ¤visibility">
+    <div class="error box ¤visibility" onclick="hide_error(event)">
       ¤error
     </div>
     <div class="box">
