--- a/picture.html
+++ b/picture.html
@@ -2,7 +2,7 @@
   <body style="background-color: #000000; padding: 0px; margin: 0px; overflow: hidden;">
     <script type="text/javascript">
       var timeout = ¤timeout
-      if(timeout) {
+      if(timeout > 0) {
         window.setTimeout(function sleep() {
           window.location.reload(true);
         }, ¤timeout*1000);
