Made the slideshow actually use the provided timeout

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -173,7 +173,7 @@
 	   name="timeout"
 	   placeholder="¤otime"
 	   value="¤stime"
-	   title="Väntetid innan nästa bild automatiskt visas. Är värdet 0 eller mindre byts inte bilden automatiskt alls." />
+	   title="Väntetid innan nästa bild automatiskt visas. Är värdet 0 sker inget automatiskt byte." />
     <img class="smallbutton inline"
 	 src="../images/revert.svg"
 	 onclick="revert(event)"
