Made the revert button for timeout work

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -148,7 +148,7 @@
 	   title="Höjd" />
     <img class="smallbutton inline"
 	 src="../images/revert.svg"
-	 onclick="revert(event)"
+	 onclick="revert_size(event)"
 	 draggable="false"
 	 title="Avbryt" />
     <img class="smallbutton inline"
@@ -176,7 +176,7 @@
 	   title="Väntetid innan nästa bild automatiskt visas. Är värdet 0 sker inget automatiskt byte." />
     <img class="smallbutton inline"
 	 src="../images/revert.svg"
-	 onclick="revert(event)"
+	 onclick="revert_time(event)"
 	 draggable="false"
 	 title="Avbryt" />
     <img class="smallbutton inline"
