Added automatic cursor hiding in slideshows

--- a/picture.html
+++ b/picture.html
@@ -23,16 +23,16 @@
       display: inline-block;
       vertical-align: middle;
       }
+      .nocursor {
+      cursor: none;
+      }
     </style>
   </head>
   <body>
     <script type="text/javascript">
       var timeout = ¤timeout
-      if(timeout > 0) {
-        window.setTimeout(function sleep() {
-          window.location.reload(true);
-        }, ¤timeout*1000);
-      }
+    </script>
+    <script type="text/javascript" src="picscript.js">
     </script>
     <div class="container">
       <img src="./slide.php?show=¤show&name=¤picture">
