--- a/admin/admin.html
+++ b/admin/admin.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="../style.css" />
+    <link rel="stylesheet" type="text/css" href="./datepick/jsDatePick_ltr.min.css" />
     <title>¤title (admin)</title>
   </head>
   <body>
@@ -11,6 +12,7 @@
     <script type="text/javascript">
       window.onload = restore_scroll
     </script>
+    <script type="text/javascript" src="./datepick/jsDatePick.min.1.3.js"></script>
     <div class="sidebar">
       <div class="box" id="settings">
 	<img class="center block" src="../images/settings.svg" />
@@ -26,6 +28,7 @@
 	    ondragover="return false"
 	    ondrop="remove_drop(event)">
 	<img class="center block" src="../images/delete.svg" />
+	<input type="hidden" name="action" value="remove" />
 	<input type="hidden" name="remove" />
 	<input type="hidden" name="from" />
       </form>
@@ -42,6 +45,7 @@
 	    action="./action.php"
 	    method="post"
 	    enctype="multipart/form-data">
+	<input type="hidden" name="action" value="upload_file" />
 	<input type="hidden" name="MAX_FILE_SIZE" value="20000000" />
 	Ladda upp ny bild:
 	<input name="uploadfile" type="file" />
@@ -66,7 +70,7 @@
 	    action="./action.php"
 	    method="post"
 	    enctype="multipart/form-data">
-	<input name="new_show" type="hidden" />
+	<input type="hidden" name="action" value="create_show" />
 	Lägg till ny yta:
 	<input name="name"
 	       class="inline"
@@ -97,24 +101,29 @@
 	 src="../slide.php?show=thumb&name=¤slide"
 	 draggable="false" />
     
-    <img class="schedule tinybox smallbutton"
-	 src="../images/settings.svg"
+    <img class="slidesettings tinybox smallbutton onlyshow fade"
+	 src="../images/settings_inactive.svg"
 	 draggable="false"
 	 onclick="toggle_settings(event)"/>
 
-    <form name="endtime"
-	  class="scheduleform box hidden"
+    <img class="settingsactive tinybox smallbutton onlyshow ¤active"
+	 src="../images/settings_active.svg"
+	 draggable="false"
+	 onclick="toggle_settings(event)"/>
+
+    <form name="autoremove"
+	  class="slidesettingsform box hidden"
 	  action="./action.php"
 	  method="post"
 	  enctype="multipart/form-data">
-      <input type="hidden" name="id" value="¤showid" />
+      <input type="hidden" name="action" value="set_slide_autoremoval" />
+      <input type="hidden" name="show" value="¤showid" />
       <input type="hidden" name="slide" value="¤slide" />
       <p>
 	Sista visningsdag:
 	<input class="inline w75"
 	       type="text"
 	       name="endtime"
-	       placeholder="¤oendtime"
 	       value="¤sendtime"
 	       title="Sista dagen innan bilden automatiskt tas bort från den här visningsytan. Är fältet tomt så tas den inte bort automatiskt." />
 	<input type="hidden" name="start_endtime" value="¤sendtime" />
@@ -152,7 +161,8 @@
 	action="./action.php"
 	method="post"
 	enctype="multipart/form-data">
-    
+
+    <input type="hidden" name="action" value="add_slide_to_show" />
     <input type="hidden" name="add" />
     <input type="hidden" name="to" value="¤showid" />
   </form>
@@ -165,7 +175,7 @@
 	action="./action.php"
 	method="post"
 	enctype="multipart/form-data">
-    <input type="hidden" name="size" />
+    <input type="hidden" name="action" value="set_show_size" />
     <input type="hidden" name="id" value="¤showid" />
     <input type="hidden" name="start_width" value="¤swidth" />
     <input type="hidden" name="start_height" value="¤sheight" />
@@ -201,6 +211,7 @@
 	action="./action.php"
 	method="post"
 	enctype="multipart/form-data">
+    <input type="hidden" name="action" value="set_show_timeout" />
     <input type="hidden" name="id" value="¤showid" />
     <input type="hidden" name="start_timeout" value="¤stime" />
     <p>
