--- a/admin/admin.html
+++ b/admin/admin.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="../style.css" />
-    <link rel="stylesheet" type="text/css" href="./datepick/jsDatePick_ltr.min.css" />
+    <link rel="stylesheet" type="text/css" href="./dhtmlxcalendar.css" />
     <title>¤title (admin)</title>
   </head>
   <body>
@@ -12,7 +12,7 @@
     <script type="text/javascript">
       window.onload = restore_scroll
     </script>
-    <script type="text/javascript" src="./datepick/jsDatePick.min.1.3.js"></script>
+    <script type="text/javascript" src="./dhtmlxcalendar.js"></script>
     <div class="sidebar">
       <div class="box" id="settings">
 	<img class="center block" src="../images/settings.svg" />
