--- a/admin/admin.html
+++ b/admin/admin.html
@@ -126,6 +126,7 @@
 	  class="settingsform box hideable hidden"
 	  action="./action.php"
 	  method="post"
+	  onclick="halt(event)"
 	  enctype="multipart/form-data">
       <input type="hidden" name="action" value="configure_slide" />
       <input type="hidden" name="show" value="¤showid" />
@@ -183,6 +184,7 @@
 	class="settingsform box hideable hidden"
 	action="./action.php"
 	method="post"
+	onclick="halt(event)"
 	enctype="multipart/form-data">
     
     <input type="hidden" name="action" value="configure_show" />
